2012-03-15	The InnoDB Team

	* fil/fil0fil.c, ibuf/ibuf0ibuf.c, include/fil0fil.h,
	lock/lock0lock.c:
	Fix Bug#13825266 RACE IN LOCK_VALIDATE() WHEN ACCESSING PAGES
	DIRECTLY FROM BUFFER POOL

2012-03-15	The InnoDB Team

	* handler/ha_innodb.cc:
	Fix Bug#13851171STRING OVERFLOW IN INNODB CODE FOUND BY STATIC
	ANALYSIS

2012-03-15	The InnoDB Team

	* include/sync0rw.ic:
	Fix Bug#13537504 VALGRIND: COND. JUMP/MOVE DEPENDS ON
	UNINITIALISED VALUES IN OS_THREAD_EQ

2012-03-08	The InnoDB Team

	* btr/btr0pcur.c:
	Fix Bug#13807811 BTR_PCUR_RESTORE_POSITION() CAN SKIP A RECORD

2012-02-28	The InnoDB Team

	* btr/btr0btr.c, dict/dict0dict.c, include/btr0btr.h,
	include/dict0dict.h, include/dict0dict.ic, include/dict0mem.h,
	handler/handler0alter.cc, row/row0mysql.c:
	Fix Bug#12861864 RACE CONDITION IN BTR_GET_SIZE() AND
	DROP INDEX/TABLE/DATABASE

2012-02-15	The InnoDB Team

	* btr/btr0btr.c, btr/btr0cur.c, fsp/fsp0fsp.c, ibuf/ibuf0ibuf.c,
	include/btr0btr.h, include/btr0cur.h, include/btr0cur.ic,
	include/buf0buf.h, include/buf0buf.ic, include/fsp0fsp.h,
	include/mtr0mtr.h, include/mtr0mtr.ic, include/page0page.h,
	include/page0page.ic, include/trx0rec.ic, include/trx0undo.h,
	mtr/mtr0mtr.c, page/page0cur.c, page/page0page.c, row/row0ins.c,
	row/row0row.c, row/row0upd.c, trx/trx0rec.c, trx/trx0sys.c,
	trx/trx0undo.c:
	Fix Bug#13721257 RACE CONDITION IN UPDATES OR INSERTS OF WIDE RECORDS

2012-02-06	The InnoDB Team

	* handler/ha_innodb.cc:
	Fix Bug#11754376 45976: INNODB LOST FILES FOR TEMPORARY TABLES ON
	GRACEFUL SHUTDOWN

2012-01-30	The InnoDB Team

	* fil/fil0fil.c:
	Fix Bug#13636122 THE ORIGINAL TABLE MISSING WHILE EXECUTE THE
	DDL 'ALTER TABLE ADD COLUMN'

2012-01-16	The InnoDB Team

	* ibuf/ibuf0ibuf.c:
	Fix Bug#13496818 ASSERTION: REC_PAGE_NO > 4 IN IBUF CONTRACTION

2012-01-16	The InnoDB Team

	* handler/ha_innodb.cc:
	Fix Bug#11765438: 58406: ISSUES WITH COPYING PARTITIONED INNODB
	TABLES FROM LINUX TO WINDOWS

2012-01-04	The InnoDB Team

	* row/row0mysql.c: